--- a/TransmogDBEngine/TransmogDBEngine.csproj
+++ b/TransmogDBEngine/TransmogDBEngine.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transmog.cs" />
+    <Compile Include="TransmogSet.cs" />
     <Compile Include="TransmogItem.cs" />
   </ItemGroup>
   <ItemGroup>
